21:53 30/05/17 Changed dp to sp for text sizes added contentDescription for the images added some unversioned files changed alignParentLeft to alignParenStart

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,7 @@
     <string name="voice">Voice Volume Control</string>
     <string name="music">Music Volume Control</string>
     <string name="alarm">Alarm Volume Control</string>
+    <string name="silent">Silent</string>
+    <string name="ringon">RingOn</string>
+    <string name="vibrate">Vibrate</string>
 </resources>
